--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -6,7 +6,9 @@
     "pages/newOrders/newOrders",
     "pages/newOrderDetails/newOrderDetails",
     "pages/myOrders/myOrders",
+    "pages/historyOrders/historyOrders",
     "pages/myOrderDetails/myOrderDetails",
+    "pages/historyRepairRecords/historyRepairRecords",
     "pages/repairRecords/repairRecords",
     "pages/signIn/signIn",
     "pages/cusIndex/cusIndex",
