通过openid订单唯一性

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -15,7 +15,8 @@
     "pages/reportOrder/reportOrder",
     "pages/historyRepairRecords/historyRepairRecords",
     "pages/historyOrders/historyOrders",
-    "pages/logIn/logIn"
+    "pages/logIn/logIn",
+    "pages/cusHistory/cusHistory"
         
         
         
