信息中心_报修审核

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -22,9 +22,10 @@
     "customer/reportOrder/reportOrder",
     "customer/cusHistory/cusHistory",
     "infoCenter/facilityManage/facilityManage",
-    "infoCenter/orderReview/orderReview"
-   
-               
+    "infoCenter/orderReview/orderReview",
+    "infoCenter/ReviewDetails/ReviewDetails"
+    
+              
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
