--- a/project.config.json
+++ b/project.config.json
@@ -33,7 +33,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 3,
+			"current": 5,
 			"list": [
 				{
 					"id": -1,
@@ -60,6 +60,20 @@
 					"id": -1,
 					"name": "infoCenter/ReviewDetails/ReviewDetails",
 					"pathName": "infoCenter/ReviewDetails/ReviewDetails",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": 4,
+					"name": "登录页面",
+					"pathName": "pages/logIn/logIn",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "审批首页",
+					"pathName": "pages/reviewIndex/reviewIndex",
 					"query": "",
 					"scene": null
 				}
