--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -37,6 +37,10 @@
     "manager/newOrders/newOrders",
     "manager/newOrderDetails/newOrderDetails",
     "manager/peopleManage/peopleManage",
+    "manager/assignedOrder/assignedOrder",
+    "manager/orderDetail/orderDetail",
+    "manager/recallDetail/recallDetail",
+    "manager/updateInfo/updateInfo",
     "charts/bar/index",
     "charts/line/index",
     "charts/pie/index",
