--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -24,6 +24,7 @@
     "customer/scanReport/scanReport",
     "customer/reportOrder/reportOrder",
     "customer/cusHistory/cusHistory",
+    "customer/orderlist/orderlist",
     "infoCenter/facilityManage/facilityManage",
     "infoCenter/orderReview/orderReview",
     "infoCenter/ReviewDetails/ReviewDetails",
@@ -41,6 +42,8 @@
     "manager/orderDetail/orderDetail",
     "manager/recallDetail/recallDetail",
     "manager/updateInfo/updateInfo",
+    "manager/repaireHistory/repaireHistory",
+    "manager/createOrder/createOrder",
     "charts/bar/index",
     "charts/line/index",
     "charts/pie/index",
