信息中心升级

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -32,6 +32,7 @@
     "infoCenter/ReviewDetails/ReviewDetails",
     "infoCenter/approverSet/approverSet",
     "infoCenter/approverModify/approverModify",
+    "infoCenter/orderTrack/orderTrack",
     "approver/orderApproval/orderApproval",
     "approver/approveDetails/approveDetails",
     "approver/repaireHistory/repaireHistory",
@@ -46,6 +47,7 @@
     "manager/updateInfo/updateInfo",
     "manager/repaireHistory/repaireHistory",
     "manager/createOrder/createOrder",
+    "manager/excelOut/excelOut",
     "charts/bar/index",
     "charts/line/index",
     "charts/pie/index",
