单位授权管理
管理各单位和企业的使用权限

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -48,6 +48,10 @@
     "manager/repaireHistory/repaireHistory",
     "manager/createOrder/createOrder",
     "manager/excelOut/excelOut",
+    "manager/subscribeMessage/subscribeMessage",
+    "manager/orgManage/orgManage",
+    "manager/addOrg/addOrg",
+    "manager/orgSet/orgSet",
     "charts/bar/index",
     "charts/line/index",
     "charts/pie/index",
